crates/red_knot_python_semantic/resources/mdtest/snapshots/invalid_argument_type.md_-_Invalid_argument_type_diagnostics_-_Calls_to_overloaded_functions.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Calls to overloaded functions
mdtest path: crates/red_knot_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | type("Foo", ())
```

# Diagnostics

```
error: lint:too-many-positional-arguments
 --> /src/mdtest_snippet.py:1:13
  |
1 | type("Foo", ())
  |             ^^ Too many positional arguments to overload 1 of class `type`: expected 1, got 2
  |

```

```
error: lint:missing-argument
 --> /src/mdtest_snippet.py:1:1
  |
1 | type("Foo", ())
  | ^^^^^^^^^^^^^^^ No argument provided for required parameter `dict` of overload 2 of class `type`
  |

```
